--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .App-logo {
@@ -35,4 +36,139 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.main_container{
+  width: 95%;
+  max-width: 500px;
+  padding: 0.5rem;
+  border: solid 1px black;
+  border-radius: 0.5em;
+  position: relative;
+  margin: auto;
+  top: 2rem;
+}
+
+.input_field_section{
+  padding-inline: 0.8rem;
+  padding-top: 0.8rem;
+}
+
+#Add_task_input_field{
+  padding: 1em 0.4em;
+  width: 98%;
+  border: solid 1px aqua;
+  border-radius: 0.5em;
+  outline: none;
+  font-size: 0.9rem;
+}
+
+#Add_task_button{
+  position: relative;
+  right: -43%;
+  top: -39px;
+  padding: 0.5rem 0.8rem;
+  border-radius: 50%;
+  border: solid 0.2px transparent;
+  background: aqua;
+  cursor: pointer;
+}
+
+.display_task_container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  border: 1px solid rgba(0, 0, 0, 0.4);
+  border-radius: 0.5em;
+}
+
+.display_task_container + .display_task_container{
+  margin-top: 0.5rem;
+}
+
+.display_task_container p{
+  font-size: 1rem;
+  width: 60%;
+  color: black;
+}
+
+.icons{
+  position: relative;
+  width: 30%;
+  margin-top: -0.5%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 2%;
+}
+
+.delete_icon,
+.complete_check_icon{
+  width: 22px;
+  height: 22px;
+  cursor: pointer;
+}
+
+.complete_check_icon{
+  margin-left: 0.7rem;
+}
+
+.delete_icon img,
+.complete_check_icon img{
+  width: 100%;
+  height: 100%;
+}
+
+@media(width > 60em){
+
+  .main_container{
+    padding: 1rem;
+    border: solid 2px black;
+    top: 5rem;
+  }
+
+  #Add_task_input_field{
+    padding: 1em 0.6em;
+    border: solid 2px aqua;
+    font-size: 1rem;
+  }
+
+  #Add_task_button{
+    top: -43px;
+    padding: 0.5rem 0.8rem;
+    font-size: 1rem;
+    border: 0.4px solid transparent;
+  }
+
+  .input_field_section{
+    padding-top: 2rem;
+  }
+
+  .display_task_container{
+    border: 2px solid rgba(0, 0, 0, 0.4);
+  }
+
+  .display_task_container + .display_task_container{
+    margin-top: 1rem;
+  }
+
+  .display_task_container p{
+    font-size: 1.05rem;
+  }
+
+  .icons{
+    margin-left: 7%;
+  }
+
+  .delete_icon,
+  .complete_check_icon{
+    width: 23px;
+    height: 23px;
+  }
+
+  .complete_check_icon{
+    margin-left: 1rem;
+  }
+  
 }
